--- a/Rsss/RssWpf/MainWindow.xaml
+++ b/Rsss/RssWpf/MainWindow.xaml
@@ -7,7 +7,9 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        <Button x:Name="button" Content="save rss" HorizontalAlignment="Left" Height="27" Margin="404,10,0,0" VerticalAlignment="Top" Width="87" Click="button_Click"/>
+        <Button x:Name="button" Content="read rss" HorizontalAlignment="Left" Height="27" Margin="404,10,0,0" VerticalAlignment="Top" Width="87" Click="button_Click"/>
+        <Calendar HorizontalAlignment="Left" Height="157" Margin="293,81,-20.6,0" VerticalAlignment="Top" Width="246"/>
+        <Label x:Name="label" Content="Tutaj ma być ładna aplikacja" HorizontalAlignment="Left" Height="27" Margin="42,10,0,0" VerticalAlignment="Top" Width="218"/>
 
     </Grid>
 </Window>
