--- a/Rsss/RssWpf/MainWindow.xaml
+++ b/Rsss/RssWpf/MainWindow.xaml
@@ -5,14 +5,100 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RssWpf"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        <Button x:Name="button" Content="read rss" HorizontalAlignment="Left" Height="27" Margin="404,10,0,0" VerticalAlignment="Top" Width="87" Click="button_Click"/>
-        <Calendar HorizontalAlignment="Left" Height="157" Margin="293,81,-20.6,0" VerticalAlignment="Top" Width="246"/>
-        <Label x:Name="label" Content="Tutaj ma być ładna aplikacja" HorizontalAlignment="Left" Height="27" Margin="42,10,0,0" VerticalAlignment="Top" Width="218"/>
-        <Button x:Name="button1" Content="Button" HorizontalAlignment="Left" Height="41" Margin="42,101,0,0" VerticalAlignment="Top" Width="69"/>
-        <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="23" Margin="190,76,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Margin="155,158,0,0" Height="80" Width="133"/>
+        Title="Rss Research" Height="500" Width="900" Icon="C:\RSS\RSS-project\Rsss\RssWpf\ArrowDown.png">
+    <Grid Width="900" MaxWidth="900" MaxHeight="500" Height="500">
+        <Grid.Background>
+            <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
+                <GradientStop Color="#FF92BAF3"/>
+                <GradientStop Color="White" Offset="0.473"/>
+                <GradientStop Color="#FFF3F7FF" Offset="0.783"/>
+                <GradientStop Color="#FFF0F6FE" Offset="0.243"/>
+                <GradientStop Color="#FF8DB9F9" Offset="1"/>
+            </LinearGradientBrush>
+        </Grid.Background>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="0*"/>
+            <ColumnDefinition Width="0*"/>
+            <ColumnDefinition Width="0*"/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Button x:Name="button" Content="TODAY" HorizontalAlignment="Left" Height="41" Margin="467,43,0,0" VerticalAlignment="Top" Width="103" Click="button_Click" Grid.Column="3" BorderBrush="Red" IsDefault="True" FontWeight="Bold" Cursor="Hand">
+            <Button.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FF68FF00" Offset="0.5"/>
+                    <GradientStop Color="#FF008306"/>
+                    <GradientStop Color="#FF008306" Offset="0.96"/>
+                    <GradientStop Color="#FF2DB803" Offset="0.77"/>
+                    <GradientStop Color="#FF25AF03" Offset="0.223"/>
+                </LinearGradientBrush>
+            </Button.Background>
+        </Button>
+        <TextBlock x:Name="textBlock" Grid.ColumnSpan="4" HorizontalAlignment="Left" Height="450" Margin="10,10,0,0" TextWrapping="Wrap" Text="TextBlock dla Grzesia" VerticalAlignment="Top" Width="440" Foreground="{DynamicResource {x:Static SystemColors.ActiveCaptionTextBrushKey}}" Background="White"/>
+        <ComboBox x:Name="comboBox" Grid.ColumnSpan="4" HorizontalAlignment="Left" Height="28" Margin="590,43,0,0" VerticalAlignment="Top" Width="140" Cursor="Hand">
+            <ComboBox.Background>
+                <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
+                    <GradientStop Color="#FFC79A00" Offset="0"/>
+                    <GradientStop Color="#FFC19500" Offset="1"/>
+                    <GradientStop Color="Yellow" Offset="0.517"/>
+                    <GradientStop Color="#FFDFC500" Offset="0.107"/>
+                    <GradientStop Color="#FFD6B900" Offset="0.92"/>
+                    <GradientStop Color="#FFE5D300" Offset="0.767"/>
+                    <GradientStop Color="#FFEEE200" Offset="0.677"/>
+                    <GradientStop Color="#FFF5EE00" Offset="0.397"/>
+                    <GradientStop Color="#FFEDDF00" Offset="0.297"/>
+                    <GradientStop Color="#FFE5D100" Offset="0.2"/>
+                </LinearGradientBrush>
+            </ComboBox.Background>
+        </ComboBox>
+        <Button x:Name="button_Copy" Content="BY ID" HorizontalAlignment="Left" Height="41" Margin="467,89,0,0" VerticalAlignment="Top" Width="103" Click="button_Click" Grid.Column="3" FontWeight="Bold" BorderThickness="10" Cursor="Hand">
+            <Button.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FF68FF00" Offset="0.5"/>
+                    <GradientStop Color="#FF008306"/>
+                    <GradientStop Color="#FF008306" Offset="0.96"/>
+                    <GradientStop Color="#FF2DB803" Offset="0.77"/>
+                    <GradientStop Color="#FF25AF03" Offset="0.223"/>
+                </LinearGradientBrush>
+            </Button.Background>
+        </Button>
+        <Button x:Name="button_Copy1" Content="BY CHANNEL ID" HorizontalAlignment="Left" Height="39" Margin="467,135,0,0" VerticalAlignment="Top" Width="103" Click="button_Click" Grid.Column="3" BorderBrush="Red" FontWeight="Bold" Cursor="Hand">
+            <Button.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FF68FF00" Offset="0.5"/>
+                    <GradientStop Color="#FF008306"/>
+                    <GradientStop Color="#FF008306" Offset="0.96"/>
+                    <GradientStop Color="#FF2DB803" Offset="0.77"/>
+                    <GradientStop Color="#FF25AF03" Offset="0.223"/>
+                </LinearGradientBrush>
+            </Button.Background>
+        </Button>
+        <Label x:Name="label" Grid.ColumnSpan="4" Content="SHOW NEWS" HorizontalAlignment="Left" Height="26" Margin="476,13,0,0" VerticalAlignment="Top" Width="86" FontWeight="Bold" FontStyle="Italic">
+            <Label.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FF8D4D00" Offset="1"/>
+                    <GradientStop Color="#FFE28400" Offset="0.49"/>
+                    <GradientStop Color="#FF8D4D00"/>
+                    <GradientStop Color="#FFE28400" Offset="0.663"/>
+                    <GradientStop Color="#FFE28400" Offset="0.333"/>
+                </LinearGradientBrush>
+            </Label.Background>
+        </Label>
+        <ComboBox x:Name="comboBox_Copy" Grid.ColumnSpan="4" HorizontalAlignment="Left" Height="28" Margin="735,43,0,0" VerticalAlignment="Top" Width="140" Cursor="Hand">
+            <ComboBox.Background>
+                <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
+                    <GradientStop Color="#FFC79A00" Offset="0"/>
+                    <GradientStop Color="#FFC19500" Offset="1"/>
+                    <GradientStop Color="Yellow" Offset="0.517"/>
+                    <GradientStop Color="#FFDFC500" Offset="0.107"/>
+                    <GradientStop Color="#FFD6B900" Offset="0.92"/>
+                    <GradientStop Color="#FFE5D300" Offset="0.767"/>
+                    <GradientStop Color="#FFEEE200" Offset="0.677"/>
+                    <GradientStop Color="#FFF5EE00" Offset="0.397"/>
+                    <GradientStop Color="#FFEDDF00" Offset="0.297"/>
+                    <GradientStop Color="#FFE5D100" Offset="0.2"/>
+                </LinearGradientBrush>
+            </ComboBox.Background>
+        </ComboBox>
 
     </Grid>
 </Window>
